# ajuna-games

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: check-pull-request.yml
battlemogs-sage/: Cargo.toml
battlemogs-sage/src/: algorithm.rs  config.rs  error.rs  lib.rs
battlemogs-sage/src/asset/: achievement_table.rs  mod.rs  mogwai.rs
battlemogs-sage/src/transitions/: breed.rs  create.rs  hatch.rs  mod.rs  morph.rs  register.rs  remove.rs  sacrifice.rs  sarifice_into.rs
dot4gravity/: Cargo.toml
dot4gravity/src/: lib.rs  tests.rs  traits.rs
