[package]
name = "dot4gravity"
version = "0.4.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info         = { version = "2.1.1", default-features = false, features = [ "derive" ] }
sp-crypto-hashing  = { version = "0.1.0", default-features = false }

[features]
default = [ "std" ]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-crypto-hashing/std",
]
