[package]
name = "dot4gravity"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-crypto-hashing  = { workspace = true }

[features]
default = [ "std" ]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-crypto-hashing/std",
]
